--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="box"></div>
-        
-        <div class="box-wrapper">
-            <div class="box box-small"></div>
-            <div class="box box-small"></div>
-            <div class="box box-small"></div>
+        <div class="row">
+            <div class="title"></div>
+            <div class="box-wrapper">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
         </div>
     </div>
 </body>
