--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="title"></div>
-            <div class="box-wrapper">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+        <div class="box-wrapper">
+            <div class="box box-small"></div>
+            <div class="box box-small"></div>
+            <div class="tiny-wrapper">
+                <div class="box box-tiny"></div>
+                <div class="box box-tiny"></div>
+                <div class="box box-tiny"></div>
             </div>
         </div>
+        <div class="box box-large"></div>
     </div>
 </body>
 </html>
