--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <div class="container">
-        <div class="box-wrapper">
-            <div class="box box-small"></div>
-            <div class="box box-small"></div>
-            <div class="tiny-wrapper">
-                <div class="box box-tiny"></div>
-                <div class="box box-tiny"></div>
-                <div class="box box-tiny"></div>
+        <div class="row">
+            <div class="box-wrapper">
+                <div class="box box-small"></div>
+                <div class="box box-small"></div>
+                <div class="tiny-wrapper">
+                    <div class="box box-tiny"></div>
+                    <div class="box box-tiny"></div>
+                    <div class="box box-tiny"></div>
+                </div>
             </div>
+            <div class="box box-large"></div>
         </div>
-        <div class="box box-large"></div>
+        
+        
     </div>
 </body>
 </html>
